# light-logger-lib

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  simple_process.cpp  sys_process.cpp
include/logger/: asserts.h  ll.h  logger.h  logging_helper.h  macro.h  platform_config.h  time_helper.h
src/: logger.cpp  logging_trace.cpp  logging_trace.h  time_helper.cpp
tests/: logger_tests.cpp  main.cpp  tests_common.cpp  tests_common.h
